Make all the transliteration for the acsii-only mode to be table driven.

--- a/branches/lang/build.xml
+++ b/branches/lang/build.xml
@@ -112,6 +112,7 @@
 			<fileset dir="${resources}">
 				<include name="*.csv"/>
 				<include name="*.properties"/>
+				<include name="**/*.trans"/>
 			</fileset>
 		</copy>
   </target>
